--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
+sudo: false
 language: cpp
 compiler: clang
-before_install: sudo apt-get update
-install: sudo apt-get install clang make automake libsdl1.2-dev libogg-dev libsdl-image1.2-dev libopenal-dev libvorbis-dev -y
 script: cd source/src && make
-notifications:
-  irc:
-    channels:
-      - "underworld1.no.quakenet.org#assaultcube"
-      - "underworld1.no.quakenet.org#assaultcube-dev"
-    template:
-      - "Build log for %{commit} by %{author}: %{build_url}"
-    skip_join: true
+addons:
+  apt:
+    packages:
+      - clang
+      - make
+      - automake
+      - libsdl1.2-dev
+      - libogg-dev
+      - libsdl-image1.2-dev
+      - libopenal-dev
+      - libvorbis-dev
